advantes xit-product

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -8,6 +8,10 @@
              "4" : "Terms of cooperation",
              "5" : "Articles",
              "6" : "Contacts"
+        },
+        "HomeHero" : {
+            "0" : "",
+            "2": "Our partners"
         }
     },
     "Contact" : {
