--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -10,10 +10,32 @@
             "6" : "Контакты"
         },
         "HomeHero" :{
-            "0" : ""
+            "0" : "Качественные медицинские изделия от Medicare",
+            "1" : "Надежные решения для вашей медицинской деятельности",
+            "2": "Наши партнеры"
+        },
+        "AboutVideo" : {
+            "0" : "Medicare LLC",
+            "1" : "Medicare - это компания, созданная с целью обеспечения медицинских учреждений и профессионалов здравоохранения надежными и высококачественными расходниками. \n\nС момента нашего основания в 2018 году мы стремимся к обеспечению наших клиентов продукцией, соответствующей самым высоким стандартам качества.\n\nВ настоящее время мы также рассматриваем возможность начать оптовый импорт клейких бинтов, расширяя нашу линейку продукции для удовлетворения растущих потребностей наших клиентов в медицинских товарах высочайшего качества."
+        },
+        "Xit" : {
+            "0" : "Хиты продаж"
+        },
+        "OurAdvanges" : {
+            "0" : "Наши преимущества",
+            "1" :"Строгий контроль качества",
+            "2" : "Широкий ассортимент продукции",
+            "3" : "Профессиональный сервис",
+            "4" : "Индивидуальный подход",
+            "5" : "Инновационные решения",
+            "6" :"Быстрая и надежная доставка"
         }
     },
     "Contact" : {
         "0" : "Приветь 2"
+    },
+    "Card" : {
+        "0" : "Подробнее",
+        "1" : "В корзину"
     }
 }
