ask component add

--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -1,41 +1,63 @@
 {
-    "Home" : {
-        "Header" :{ 
-            "0" : "Доставка в любой город Узбекистана!",
-            "1" : "Обратный звонок",
-            "2":  "Каталог ",
-            "3" : "О нас",
-            "4" : "Условия сотрудничества",
-            "5" : "Статьи",
-            "6" : "Контакты"
-        },
-        "HomeHero" :{
-            "0" : "Качественные медицинские изделия от Medicare",
-            "1" : "Надежные решения для вашей медицинской деятельности",
-            "2": "Наши партнеры"
-        },
-        "AboutVideo" : {
-            "0" : "Medicare LLC",
-            "1" : "Medicare - это компания, созданная с целью обеспечения медицинских учреждений и профессионалов здравоохранения надежными и высококачественными расходниками. \n\nС момента нашего основания в 2018 году мы стремимся к обеспечению наших клиентов продукцией, соответствующей самым высоким стандартам качества.\n\nВ настоящее время мы также рассматриваем возможность начать оптовый импорт клейких бинтов, расширяя нашу линейку продукции для удовлетворения растущих потребностей наших клиентов в медицинских товарах высочайшего качества."
-        },
-        "Xit" : {
-            "0" : "Хиты продаж"
-        },
-        "OurAdvanges" : {
-            "0" : "Наши преимущества",
-            "1" :"Строгий контроль качества",
-            "2" : "Широкий ассортимент продукции",
-            "3" : "Профессиональный сервис",
-            "4" : "Индивидуальный подход",
-            "5" : "Инновационные решения",
-            "6" :"Быстрая и надежная доставка"
-        }
+  "Home": {
+    "Header": {
+      "0": "Доставка в любой город Узбекистана!",
+      "1": "Обратный звонок",
+      "2": "Каталог ",
+      "3": "О нас",
+      "4": "Условия сотрудничества",
+      "5": "Статьи",
+      "6": "Контакты"
     },
-    "Contact" : {
-        "0" : "Приветь 2"
+    "HomeHero": {
+      "0": "Качественные медицинские изделия от Medicare",
+      "1": "Надежные решения для вашей медицинской деятельности",
+      "2": "Наши партнеры"
     },
-    "Card" : {
-        "0" : "Подробнее",
-        "1" : "В корзину"
+    "AboutVideo": {
+      "0": "Medicare LLC",
+      "1": "Medicare - это компания, созданная с целью обеспечения медицинских учреждений и профессионалов здравоохранения надежными и высококачественными расходниками. \n\nС момента нашего основания в 2018 году мы стремимся к обеспечению наших клиентов продукцией, соответствующей самым высоким стандартам качества.\n\nВ настоящее время мы также рассматриваем возможность начать оптовый импорт клейких бинтов, расширяя нашу линейку продукции для удовлетворения растущих потребностей наших клиентов в медицинских товарах высочайшего качества."
+    },
+    "Xit": {
+      "0": "Хиты продаж"
+    },
+    "OurAdvanges": {
+      "0": "Наши преимущества",
+      "1": "Строгий контроль качества",
+      "2": "Широкий ассортимент продукции",
+      "3": "Профессиональный сервис",
+      "4": "Индивидуальный подход",
+      "5": "Инновационные решения",
+      "6": "Быстрая и надежная доставка"
+    },
+    "Ask" : {
+        "0" : "Задайте нам вопрос",
+        "1" : "Ваше имя",
+        "2" : "Ваш телефон*",
+        "3" : "Ваш вопрос",
+        "4" : "Отправить"
+    },
+    "Faq" : {
+        "0" : "Часто задаваемые вопросы",
+        "1" : "Какие виды медицинских расходников вы предлагаете?",
+        "2" : "- Мы предлагаем широкий ассортимент медицинских расходников, включая шприцы, капельницы, бинты, хирургические перчатки, швы и другие одноразовые материалы высокого качества.",
+        "3" : "Каковы условия оплаты и доставки ?",
+        "4" : "- Доставка бесплатна в пределах города Ташкента. Минимальный заказ составляет 300 000 сум.",
+        "5" : "Как я могу узнать о наличии продукции и сделать заказ?",
+        "6" : "- Вы можете узнать о наличии продукции, заказав обратный звонок на нашем сайте, либо позвонив по номеру, указанному на сайте.",
+        "7" : "Каковы условия возврата или обмена продукции?",
+        "8" : "- Мы гарантируем качество нашей продукции. В случае необходимости возврата или обмена, пожалуйста, свяжитесь с нашим отделом обслуживания клиентов для получения подробной информации.",
+        "9" : "Как я могу получить поддержку и консультации по использованию вашей продукции ?",
+        "10" : "- Наша команда всегда готова оказать вам поддержку и консультации по использованию нашей продукции. Вы можете связаться с нами по телефону или электронной почте для получения необходимой помощи и информации.",
+        "11" : "Каковы преимущества вашей продукции перед конкурентами ?",
+        "12" : "- Наши медицинские расходники отличаются высоким качеством и надежностью. Мы стремимся к постоянному улучшению наших продуктов и предоставлению нашим клиентам лучшего сервиса. Кроме того, мы гордимся тем, что предлагаем конкурентоспособные цены и гибкие условия сотрудничества."
     }
+  },
+  "Contact": {
+    "0": "Приветь 2"
+  },
+  "Card": {
+    "0": "Подробнее",
+    "1": "В корзину"
+  }
 }
