add home page blog component

--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -51,6 +51,9 @@
         "10" : "- Наша команда всегда готова оказать вам поддержку и консультации по использованию нашей продукции. Вы можете связаться с нами по телефону или электронной почте для получения необходимой помощи и информации.",
         "11" : "Каковы преимущества вашей продукции перед конкурентами ?",
         "12" : "- Наши медицинские расходники отличаются высоким качеством и надежностью. Мы стремимся к постоянному улучшению наших продуктов и предоставлению нашим клиентам лучшего сервиса. Кроме того, мы гордимся тем, что предлагаем конкурентоспособные цены и гибкие условия сотрудничества."
+    },
+    "Blog" : {
+      "0": "Полезная информация"
     }
   },
   "Contact": {
