add catalog page , product page , about page

--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -10,13 +10,13 @@
       "6": "Контакты"
     },
     "HomeHero": {
-      "0": "Качественные медицинские изделия от Medicare",
+      "0": "Качественные медицинские изделия от Medicare LLC",
       "1": "Надежные решения для вашей медицинской деятельности",
       "2": "Наши партнеры"
     },
     "AboutVideo": {
       "0": "Medicare LLC",
-      "1": "Medicare - это компания, созданная с целью обеспечения медицинских учреждений и профессионалов здравоохранения надежными и высококачественными расходниками. \n\nС момента нашего основания в 2018 году мы стремимся к обеспечению наших клиентов продукцией, соответствующей самым высоким стандартам качества.\n\nВ настоящее время мы также рассматриваем возможность начать оптовый импорт клейких бинтов, расширяя нашу линейку продукции для удовлетворения растущих потребностей наших клиентов в медицинских товарах высочайшего качества."
+      "1": "Medicare LLC - это компания, созданная с целью обеспечения медицинских учреждений и профессионалов здравоохранения надежными и высококачественными расходниками. \n\nС момента нашего основания в 2018 году мы стремимся к обеспечению наших клиентов продукцией, соответствующей самым высоким стандартам качества.\n\nВ настоящее время мы также рассматриваем возможность начать оптовый импорт клейких бинтов, расширяя нашу линейку продукции для удовлетворения растущих потребностей наших клиентов в медицинских товарах высочайшего качества."
     },
     "Xit": {
       "0": "Хиты продаж"
@@ -57,10 +57,41 @@
     }
   },
   "Contact": {
-    "0": "Приветь 2"
+    "0": "Получить консультацию специалиста",
+    "1" : "Оставьте свой номер, и мы вам перезвоним"
   },
   "Card": {
     "0": "Подробнее",
     "1": "В корзину"
+  },
+  "Product" : {
+    "0" : "Способы доставки:",
+    "1" : "доставка по Ташкенту бесплатно",
+    "2" : "Оплата:",
+    "3" : "Оплата картой Click , Payme",
+    "4" : "Гарантия качества",
+    "5" : "Оперативная доставка",
+    "6" : "Все способы оплаты",
+    "7" : "Подробнее",
+    "8" : "Добавить в корзину",
+    "9" : "Описание",
+    "10" : "Похожие товары"
+  },
+  "About" : {
+    "0" : "Ваш надёжный партнер в здравоохранении",
+    "1" : "Мы в Medicare LLC гордимся тем, что предоставляем высококачественные медицинские изделия, которые являются надежным стандартом в индустрии здравоохранения. С нашим богатым опытом и уникальным подходом к качеству, мы стремимся обеспечить наших клиентов всем необходимым для эффективной и безопасной медицинской практики.\n\nВ центре нашей философии лежит стремление к инновациям и постоянному совершенствованию. Мы постоянно исследуем новые технологии и разработки, чтобы предложить нашим клиентам самые передовые и эффективные решения. Наша цель - не просто следовать трендам, а задавать их, обеспечивая нашим клиентам доступ к самым передовым продуктам.",
+    "2" : "Мы верим, что каждый заслуживает высочайшего уровня заботы и безопасности в медицинской сфере. Наша миссия - сделать медицинскую практику более эффективной, безопасной и доступной, предлагая широкий ассортимент продукции высокого качества и предоставляя выдающийся сервис.",
+    "3" : "Мы ценим наших клиентов и стремимся к построению долгосрочных партнерских отношений на основе доверия и взаимного уважения.",
+    "4" : "Строгий контроль качества",
+    "5" : "Мы осуществляем тщательный контроль качества на каждом этапе производства, чтобы гарантировать безупречность каждого изделия, достигая высоких стандартов в области медицинской безопасности.",
+    "6" : "Профессиональный сервис",
+    "7" : "Наша команда готова предоставить высококвалифицированную поддержку и консультации по всем вопросам, связанным с нашей продукцией и услугами.",
+    "8" : "Индивидуальный подход",
+    "9" : "Наша компания ценит индивидуальные потребности каждого клиента, и мы готовы предложить решения, наиболее соответствующие их уникальным требованиям и бюджету.",
+    "10" : "Широкий ассортимент продукции" ,
+    "11" : "Мы предлагаем широкий выбор медицинских расходников, позволяя клиникам и больницам получить все необходимое от одного надежного поставщика.",
+    "12" : "Быстрая и надежная доставка",
+    "13" : "Medicare LLC обеспечивает оперативную доставку продукции, сокращая время ожидания и обеспечивая постоянное наличие важных медицинских расходников.",
+    "14" : "Наши сертификаты"
   }
 }
