add payment page

--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -93,5 +93,19 @@
     "12" : "Быстрая и надежная доставка",
     "13" : "Medicare LLC обеспечивает оперативную доставку продукции, сокращая время ожидания и обеспечивая постоянное наличие важных медицинских расходников.",
     "14" : "Наши сертификаты"
+  },
+  "Payment" : {
+    "0" : "Оплата и доставка",
+    "1" : "Оплата",
+    "2" : "Перечислением на расчетный счет",
+    "3" : "Оплата товара банковским перечислением",
+    "4" : "Онлайн-оплата через платежные системы",
+    "5" : "Наличными",
+    "6" : "Оплата товара наличными при его получении в городе Ташкент",
+    "7" : "Доставка",
+    "8" : "Доставка по Ташкенту",
+    "9" : "Адресная доставка:\n\nСроки доставки 1-3 дня.\n\n Стоимость доставки -\nБесплатная доставка при сумме заказа от 300 000 сум.\n\nОплату заказа можно осуществить наличными или банковской картой.",
+    "10" : "Доставка в регионы",
+    "11" : "Доставка через почтовую службу.\n\nСроки доставки 2-5 дней.\n\nСтоимость доставки - по тарифам почтовой службы.\n\nОплату заказа можно осуществить перечислением на расчетный счет либо онлайн с помощью платежных систем."
   }
 }
