--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -106,6 +106,8 @@
     "8" : "Доставка по Ташкенту",
     "9" : "Адресная доставка:\n\nСроки доставки 1-3 дня.\n\n Стоимость доставки -\nБесплатная доставка при сумме заказа от 300 000 сум.\n\nОплату заказа можно осуществить наличными или банковской картой.",
     "10" : "Доставка в регионы",
-    "11" : "Доставка через почтовую службу.\n\nСроки доставки 2-5 дней.\n\nСтоимость доставки - по тарифам почтовой службы.\n\nОплату заказа можно осуществить перечислением на расчетный счет либо онлайн с помощью платежных систем."
+    "11" : "Доставка через почтовую службу.\n\nСроки доставки 2-5 дней.\n\nСтоимость доставки - по тарифам почтовой службы.\n\nОплату заказа можно осуществить перечислением на расчетный счет либо онлайн с помощью платежных систем.",
+    "12": "Статьи",
+    "13" : "читать"
   }
 }
