add blogs page , more blog page

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -16,5 +16,9 @@
     },
     "Contact" : {
         "0" : "Hello 2"
-    }
+    },
+    "Card": {
+        "0": "More details",
+        "1": "Add to cart"
+      }
 }
