--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -109,5 +109,9 @@
     "11" : "Доставка через почтовую службу.\n\nСроки доставки 2-5 дней.\n\nСтоимость доставки - по тарифам почтовой службы.\n\nОплату заказа можно осуществить перечислением на расчетный счет либо онлайн с помощью платежных систем.",
     "12": "Статьи",
     "13" : "читать"
+  },
+  "Blog" :{ 
+    "0": "Поделиться статьей",
+    "1" :"Актуальные товары"
   }
 }
