add category , product, blog , api module , query

--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -62,7 +62,8 @@
   },
   "Card": {
     "0": "Подробнее",
-    "1": "В корзину"
+    "1": "В корзину",
+    "2" : "Категории"
   },
   "Product" : {
     "0" : "Способы доставки:",
