add cart page logica

--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -114,5 +114,14 @@
   "Blog" :{ 
     "0": "Поделиться статьей",
     "1" :"Актуальные товары"
+  },
+  "Cart" : {
+    "0" : "Корзина",
+    "1" : "Общее количество:",
+    "2" : "Для продолжения нажмите кнопку Оформить заказ",
+    "3" : "Оформить заказ",
+    "4" : "Фото",
+    "5" : "Наименование",
+    "6" : "Количество:"
   }
 }
