--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -1,5 +1,6 @@
 {
   "Home": {
+    "0":"Наши операторы свяжутся с вами в ближайшее время",
     "Header": {
       "0": "Доставка в любой город Узбекистана!",
       "1": "Обратный звонок",
@@ -8,6 +9,11 @@
       "4": "Условия сотрудничества",
       "5": "Статьи",
       "6": "Контакты"
+    },
+    "Footer":{
+      "0": "©Разработала команда  Software System Pro",
+      "1" : "Узбекистан, город Ташкент, ул.Фаробий, 3-Б.",
+      "2" : "Мы в соц. сетях"
     },
     "HomeHero": {
       "0": "Качественные медицинские изделия от Medicare LLC",
@@ -123,5 +129,22 @@
     "4" : "Фото",
     "5" : "Наименование",
     "6" : "Количество:"
+  },
+  "Order":{
+    "0" : "Оформление заказа",
+    "1" : "Информация о покупателе:",
+    "2" : "Имя",
+    "3" : "Телефон:",
+    "4" : "Email:",
+    "5" :"Комментарий:",
+    "6": "Уточнения к заказу",
+    "7" : "Подтвердить заказ",
+    "8" : "Товары в корзине",
+    "9" : "шт"
+  },
+  "ContactPage" :{
+    "0" : "Наш адрес:",
+    "1"  : "Контактные номера:",
+    "2" :"Электронная почта:"
   }
 }
