--- a/public/locales/uz.json
+++ b/public/locales/uz.json
@@ -1,16 +1,150 @@
-{
-    "Home" : {
-        "Header" :{
-            "0" : "O'zbekistonning istalgan shahriga yetkazib berish!",
-             "1": "Qayta qo'ng'iroq",
-             "2": "Katalog",
-             "3" : "Biz haqimizda",
-             "4" : "Hamkorlik shartlari",
-             "5" : "Maqolalar",
-             "6" : "Kontaktlar"
-        }
+  {
+  "Home": {
+    "0":"Operatorlarimiz tez orada siz bilan bog'lanadi",
+    "Header": {
+      "0": "O'zbekistonning istalgan shahriga yetkazib berish!",
+      "1": "Qayta qo'ng'iroq",
+      "2": "Katalog",
+      "3": "Biz haqimizda",
+      "4": "Hamkorlik shartlari",
+      "5": "Maqolalar",
+      "6": "Kontaktlar"
     },
-    "Contact" : {
-        "0" : "Salom 2"
+    "Footer":{
+      "0": " © Software System Pro jamoasi tomonidan ishlab chiqilgan",
+      "1": "O'zbekiston, Toshkent shahri, Farobiy ko'chasi, 3-B.",
+      "2": "Biz ijtimoiy tarmoqlarda"
+    },
+    "HomeHero": {
+      "0": "Medicare MChJdan sifatli tibbiy mahsulotlar",
+      "1": "Tibbiy faoliyatingiz uchun ishonchli echimlar",
+      "2": "Bizning sheriklarimiz"
+    },
+    "AboutVideo": {
+      "0": "Medicare LLC",
+      "1": "Medicare MCHJ - bu sog'liqni saqlash muassasalari va sog'liqni saqlash mutaxassislarini ishonchli va yuqori sifatli sarf materiallari bilan ta'minlash maqsadida tashkil etilgan kompaniya. \n\n 2018 yilda tashkil etilganidan beri biz mijozlarimizni eng yuqori sifat standartlariga javob beradigan mahsulotlar bilan ta'minlashga intilamiz.\n\n Ayni paytda biz mijozlarimizning eng yuqori sifatli tibbiy mahsulotlarga bo'lgan o'sib borayotgan ehtiyojlarini qondirish uchun mahsulot qatorimizni kengaytirib, yopishtiruvchi bandajlarni ulgurji import qilishni boshlashni ham ko'rib chiqmoqdamiz."
+    },
+    "Xit": {
+      "0": "Ommabop mahsulotlar"
+    },
+    "OurAdvanges": {
+      "0": "Bizning afzalliklarimiz",
+      "1": "Battiq sifat nazorati",
+      "2": "Mahsulotlarning keng assortimenti",
+      "3": "Professional xizmat",
+      "4": "Individual yondashuv",
+      "5": "Innovatsion echimlar",
+      "6": "Tez va ishonchli etkazib berish"
+    },
+    "Ask" : {
+      "0": "Bizga savol bering",
+      "1": "Sizning ismingiz",
+      "2": "Sizning telefoningiz*",
+      "3": "Sizning savolingiz",
+      "4": "Yuborish"
+    },
+    "Faq" : {
+      "0": "Tez-tez so'raladigan savollar",
+      "1": "Siz qanday tibbiy sarf materiallarini taklif qilasiz?",
+      "2": "- Biz shpritslar, tomchilar, bintlar, jarrohlik qo'lqoplari, tikuvlar va boshqa yuqori sifatli bir martalik materiallarni o'z ichiga olgan keng turdagi tibbiy sarf materiallarini taklif etamiz.",
+      "3": "To'lov va etkazib berish shartlari qanday ?",
+      "4": "- Toshkent shahri doirasida yetkazib berish bepul. Minimal buyurtma 300 000 so'mni tashkil etadi.",
+      "5": "Qanday qilib mahsulot mavjudligini bilib, buyurtma berishim mumkin?",
+      "6": "- Mahsulot mavjudligini veb-saytimizda qayta qo'ng'iroq qilish yoki saytda ko'rsatilgan raqamga qo'ng'iroq qilish orqali bilib olishingiz mumkin.",
+      "7": "Mahsulotni qaytarish yoki almashtirish shartlari qanday?",
+      "8": "- Biz mahsulotlarimiz sifatini kafolatlaymiz. Agar qaytarib berish yoki almashtirish zarur bo'lsa, batafsil ma'lumot olish uchun mijozlarga xizmat ko'rsatish bo'limiga murojaat qiling.",
+      "9": "Mahsulotlaringizdan foydalanish bo'yicha qanday qilib yordam va maslahat olishim mumkin ?",
+      "10": "- Bizning jamoamiz har doim mahsulotlarimizdan foydalanish bo'yicha sizga yordam va maslahat berishga tayyor. Kerakli yordam va ma'lumot uchun biz bilan telefon yoki elektron pochta orqali bog'lanishingiz mumkin.",
+      "11": "Mahsulotlaringizning raqobatchilardan qanday afzalliklari bor ?",
+      "12": "- Bizning tibbiy sarf materiallari yuqori sifatli va ishonchli. Biz mahsulotlarimizni doimiy ravishda yaxshilashga va mijozlarimizga eng yaxshi xizmatni taqdim etishga intilamiz. Bundan tashqari, biz raqobatbardosh narxlar va moslashuvchan hamkorlik shartlarini taklif qilishdan faxrlanamiz."
+    },
+    "Blog" : {
+      "0": "Foydali ma'lumotlar"
     }
+  },
+  "Contact": {
+    "0": " Mutaxassis maslahatini oling",
+    "1": "Raqamingizni qoldiring va biz sizga qo'ng'iroq qilamiz"
+  },
+  "Card": {
+    "0": "Ko'proq",
+    "1": "Savatga",
+    "2": "Kategoriyalar"
+  },
+  "Product" : {
+    "0": "Yetkazib berish usullari:",
+    "1": "Toshkentda bepul yetkazib berish",
+    "2": "To'lov:",
+    "3": "Click , Payme kartasi bilan to'lash",
+    "4": "Sifat kafolati",
+    "5": "Operatsion etkazib berish",
+    "6": "Barcha to'lov usullari",
+    "7": "Ko'proq",
+    "8": "Savatga Qo'shish",
+    "9": "Tavsif",
+    "10": "O'xshash mahsulotlar"
+  },
+  "About" : {
+    "0": "Sizning ishonchli sog'liqni saqlash hamkoringiz",
+    "1": "Biz Medicare MChJda sog'liqni saqlash sohasida ishonchli standart bo'lgan yuqori sifatli tibbiy mahsulotlarni taqdim etishdan faxrlanamiz. Bizning boy tajribamiz va sifatga noyob yondashuvimiz bilan biz mijozlarimizni samarali va xavfsiz tibbiy amaliyot uchun zarur bo'lgan barcha narsalar bilan ta'minlashga intilamiz.\n\n Bizning falsafamizning markazida innovatsiyalar va doimiy takomillashtirishga intilish yotadi. Biz mijozlarimizga eng ilg'or va samarali echimlarni taklif qilish uchun doimiy ravishda yangi texnologiyalar va ishlanmalarni o'rganamiz. Bizning maqsadimiz nafaqat tendentsiyalarga rioya qilish, balki mijozlarimizga eng ilg'or mahsulotlarga kirishni ta'minlash orqali ularni o'rnatishdir.",
+    "2": "Biz har bir inson tibbiyot sohasida eng yuqori darajadagi g'amxo'rlik va xavfsizlikka loyiq ekanligiga ishonamiz. Bizning vazifamiz yuqori sifatli mahsulotlarning keng assortimentini taklif qilish va ajoyib xizmat ko'rsatish orqali tibbiy amaliyotni yanada samarali, xavfsiz va arzonroq qilishdir.",
+    "3": "Biz mijozlarimizni qadrlaymiz va ishonch va o'zaro hurmat asosida uzoq muddatli sheriklik aloqalarini o'rnatishga intilamiz.",
+    "4": "Qattiq sifat nazorati",
+    "5": "Biz har bir mahsulotning mukammalligini ta'minlash uchun ishlab chiqarishning har bir bosqichida sifatni sinchkovlik bilan nazorat qilamiz va tibbiy xavfsizlikning yuqori standartlariga erishamiz.",
+    "6": "Professional xizmat",
+    "7": "Bizning jamoamiz mahsulotlarimiz va xizmatlarimiz bilan bog'liq barcha masalalar bo'yicha yuqori malakali yordam va maslahat berishga tayyor.",
+    "8": "Individual yondashuv",
+    "9": "Bizning kompaniyamiz har bir mijozning individual ehtiyojlarini qadrlaydi va biz ularning noyob talablari va byudjetiga eng mos keladigan echimlarni taklif qilishga tayyormiz.",
+    "10": "Mahsulotlarning keng assortimenti" ,
+    "11": "Biz klinikalar va shifoxonalarga bitta ishonchli etkazib beruvchidan kerakli narsalarni olish imkoniyatini beradigan turli xil tibbiy sarf materiallarini taklif etamiz.",
+    "12": "Tez va ishonchli etkazib berish",
+    "13": "Medicare MCHJ mahsulotlarni tezkor etkazib berishni ta'minlaydi, kutish vaqtini qisqartiradi va muhim tibbiy sarf materiallarining doimiy mavjudligini ta'minlaydi.",
+    "14": "Bizning sertifikatlarimiz"
+  },
+  "Payment" : {
+    "0": "To'lov va etkazib berish",
+    "1": "To'lov",
+    "2": "Joriy hisob raqamiga o'tkazish",
+    "3": "Tovarlarni bank o'tkazmasi orqali to'lash",
+    "4": "To'lov tizimlari orqali onlayn to'lov",
+    "5": "Naqd pul",
+    "6": "Tovarni Toshkent shahrida olgandan keyin naqd pul bilan to 'lash",
+    "7": "Yetkazib berish",
+    "8": "Toshkentda yetkazib berish",
+    "9": "Manzilli etkazib berish: \n\n Etkazib berish muddati 1-3 kun. \n\n Etkazib berish narxi - \bepul etkazib berish, buyurtma miqdori 300000 so'mdan. \n\n Buyurtmani naqd pul yoki bank kartasi bilan to'lash mumkin.",
+    "10": "mintaqalarga etkazib berish",
+    "11": "Pochta xizmati orqali etkazib berish. \n\n Yetkazib berish muddati 2-5 kun. \n\n Etkazib berish narxi-pochta xizmati tariflari bo'yicha. \n\n Buyurtmani joriy hisob raqamiga o'tkazish yoki to'lov tizimlaridan foydalangan holda onlayn tarzda to'lash mumkin.",
+    "12": "Maqolalar",
+    "13": "O'qing"
+  },
+  "Blog" :{ 
+    "0": "Maqolani bolishish",
+    "1": "Aktual mahsulotlar"
+  },
+  "Cart" : {
+    "0": "Savat",
+    "1": "Umumiy soni:",
+    "2": "Davom etish uchun buyurtma berish tugmasini bosing",
+    "3": "Buyurtma berish",
+    "4": "Fotosurat",
+    "5": "Ism",
+    "6": "Miqdor:"
+  },
+  "Order":{
+    "0":"Buyurtma berish",
+    "1": "Xaridor haqida ma'lumot:",
+    "2": "Ism",
+    "3": "Telefon:",
+    "4": "Email:",
+    "5": "Izoh:",
+    "6": "Buyurtma uchun tushuntirishlar",
+    "7": "Buyurtmani tasdiqlash",
+    "8": "Savatdagi mahsulotlar",
+    "9": "Dona"
+  },
+  "ContactPage" :{
+    "0": "Bizning manzilimiz:",
+    "1": "Aloqa raqamlari:",
+    "2": "Elektron pochta:"
+  }
 }
