--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -12,7 +12,7 @@
     },
     "Footer":{
       "0": " © Developed by the Software System Pro team",
-      "1" : "Uzbekistan, Tashkent city, 3-B.Farobiy str.",
+      "1" : "Tabarruk street, 37a, Surum M.F.Y., Lower Chirchik district, Tashkent region",
       "2": "We are in the social networks"
     },
     "HomeHero": {
