--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -12,7 +12,7 @@
     },
     "Footer":{
       "0": "©Разработала команда  Software System Pro",
-      "1" : "Узбекистан, город Ташкент, ул.Фаробий, 3-Б.",
+      "1" : "г. Ташкент, Нижне-Чирчикский район, посёлок Сурум, Табаррук, дом 37а.",
       "2" : "Мы в соц. сетях"
     },
     "HomeHero": {
@@ -137,7 +137,7 @@
     "3" : "Телефон:",
     "4" : "Email:",
     "5" :"Комментарий:",
-    "6": "Уточнения к заказу",
+    "6": "Оформит",
     "7" : "Подтвердить заказ",
     "8" : "Товары в корзине",
     "9" : "шт"
