--- a/public/locales/uz.json
+++ b/public/locales/uz.json
@@ -12,7 +12,7 @@
     },
     "Footer":{
       "0": " © Software System Pro jamoasi tomonidan ishlab chiqilgan",
-      "1": "O'zbekiston, Toshkent shahri, Farobiy ko'chasi, 3-B.",
+      "1": "Toshkent viloyati, Quyi chirchiq tumani, Surum M.F.Y., Tabarruk ko'chasi, 37a-uy",
       "2": "Biz ijtimoiy tarmoqlarda"
     },
     "HomeHero": {
