--- a/public/locales/uz.json
+++ b/public/locales/uz.json
@@ -137,7 +137,7 @@
     "3": "Telefon:",
     "4": "Email:",
     "5": "Izoh:",
-    "6": "Buyurtma uchun tushuntirishlar",
+    "6": "Buyurtma berish",
     "7": "Buyurtmani tasdiqlash",
     "8": "Savatdagi mahsulotlar",
     "9": "Dona"
