--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -16,13 +16,13 @@
       "2" : "Мы в соц. сетях"
     },
     "HomeHero": {
-      "0": "Качественные медицинские изделия от Medicare LLC",
+      "0": "Качественные медицинские изделия от OOO Medicare ",
       "1": "Надежные решения для вашей медицинской деятельности",
       "2": "Наши партнеры"
     },
     "AboutVideo": {
-      "0": "Medicare LLC",
-      "1": "Medicare LLC - это компания, созданная с целью обеспечения медицинских учреждений и профессионалов здравоохранения надежными и высококачественными расходниками. \n\nС момента нашего основания в 2018 году мы стремимся к обеспечению наших клиентов продукцией, соответствующей самым высоким стандартам качества.\n\nВ настоящее время мы также рассматриваем возможность начать оптовый импорт клейких бинтов, расширяя нашу линейку продукции для удовлетворения растущих потребностей наших клиентов в медицинских товарах высочайшего качества."
+      "0": "OOO Medicare ",
+      "1": "OOO Medicare  - это компания, созданная с целью обеспечения медицинских учреждений и профессионалов здравоохранения надежными и высококачественными расходниками. \n\nС момента нашего основания в 2018 году мы стремимся к обеспечению наших клиентов продукцией, соответствующей самым высоким стандартам качества.\n\nВ настоящее время мы также рассматриваем возможность начать оптовый импорт клейких бинтов, расширяя нашу линейку продукции для удовлетворения растущих потребностей наших клиентов в медицинских товарах высочайшего качества."
     },
     "Xit": {
       "0": "Хиты продаж"
@@ -82,11 +82,12 @@
     "7" : "Подробнее",
     "8" : "Добавить в корзину",
     "9" : "Описание",
-    "10" : "Похожие товары"
+    "10" : "Похожие товары",
+    "11" : "Цена"
   },
   "About" : {
     "0" : "Ваш надёжный партнер в здравоохранении",
-    "1" : "Мы в Medicare LLC гордимся тем, что предоставляем высококачественные медицинские изделия, которые являются надежным стандартом в индустрии здравоохранения. С нашим богатым опытом и уникальным подходом к качеству, мы стремимся обеспечить наших клиентов всем необходимым для эффективной и безопасной медицинской практики.\n\nВ центре нашей философии лежит стремление к инновациям и постоянному совершенствованию. Мы постоянно исследуем новые технологии и разработки, чтобы предложить нашим клиентам самые передовые и эффективные решения. Наша цель - не просто следовать трендам, а задавать их, обеспечивая нашим клиентам доступ к самым передовым продуктам.",
+    "1" : "Мы в OOO Medicare  гордимся тем, что предоставляем высококачественные медицинские изделия, которые являются надежным стандартом в индустрии здравоохранения. С нашим богатым опытом и уникальным подходом к качеству, мы стремимся обеспечить наших клиентов всем необходимым для эффективной и безопасной медицинской практики.\n\nВ центре нашей философии лежит стремление к инновациям и постоянному совершенствованию. Мы постоянно исследуем новые технологии и разработки, чтобы предложить нашим клиентам самые передовые и эффективные решения. Наша цель - не просто следовать трендам, а задавать их, обеспечивая нашим клиентам доступ к самым передовым продуктам.",
     "2" : "Мы верим, что каждый заслуживает высочайшего уровня заботы и безопасности в медицинской сфере. Наша миссия - сделать медицинскую практику более эффективной, безопасной и доступной, предлагая широкий ассортимент продукции высокого качества и предоставляя выдающийся сервис.",
     "3" : "Мы ценим наших клиентов и стремимся к построению долгосрочных партнерских отношений на основе доверия и взаимного уважения.",
     "4" : "Строгий контроль качества",
@@ -98,7 +99,7 @@
     "10" : "Широкий ассортимент продукции" ,
     "11" : "Мы предлагаем широкий выбор медицинских расходников, позволяя клиникам и больницам получить все необходимое от одного надежного поставщика.",
     "12" : "Быстрая и надежная доставка",
-    "13" : "Medicare LLC обеспечивает оперативную доставку продукции, сокращая время ожидания и обеспечивая постоянное наличие важных медицинских расходников.",
+    "13" : "OOO Medicare  обеспечивает оперативную доставку продукции, сокращая время ожидания и обеспечивая постоянное наличие важных медицинских расходников.",
     "14" : "Наши сертификаты"
   },
   "Payment" : {
