add fixed category

--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -12,7 +12,7 @@
     },
     "Footer":{
       "0": "©Разработала команда  Software System Pro",
-      "1" : "г. Ташкент, Нижне-Чирчикский район, посёлок Сурум, Табаррук, дом 37а.",
+      "1" : "г. Ташкент, Куйи-Чирчикский район, посёлок Сурум, Табаррук, дом 37а.",
       "2" : "Мы в соц. сетях"
     },
     "HomeHero": {
