--- a/public/locales/uz.json
+++ b/public/locales/uz.json
@@ -25,7 +25,7 @@
       "1": "Medicare MCHJ - bu sog'liqni saqlash muassasalari va sog'liqni saqlash mutaxassislarini ishonchli va yuqori sifatli sarf materiallari bilan ta'minlash maqsadida tashkil etilgan kompaniya. \n\n 2018 yilda tashkil etilganidan beri biz mijozlarimizni eng yuqori sifat standartlariga javob beradigan mahsulotlar bilan ta'minlashga intilamiz.\n\n Ayni paytda biz mijozlarimizning eng yuqori sifatli tibbiy mahsulotlarga bo'lgan o'sib borayotgan ehtiyojlarini qondirish uchun mahsulot qatorimizni kengaytirib, yopishtiruvchi bandajlarni ulgurji import qilishni boshlashni ham ko'rib chiqmoqdamiz."
     },
     "Xit": {
-      "0": "Ommabop mahsulotlar"
+      "0": "Ommabop "
     },
     "OurAdvanges": {
       "0": "Bizning afzalliklarimiz",
