--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -83,7 +83,8 @@
     "8" : "Добавить в корзину",
     "9" : "Описание",
     "10" : "Похожие товары",
-    "11" : "Цена"
+    "11" : "Цена",
+    "12": "Товар добавлен в корзину"
   },
   "About" : {
     "0" : "Ваш надёжный партнер в здравоохранении",
@@ -129,7 +130,8 @@
     "3" : "Оформить заказ",
     "4" : "Фото",
     "5" : "Наименование",
-    "6" : "Количество:"
+    "6" : "Количество:",
+    "7" : "Размер"
   },
   "Order":{
     "0" : "Оформление заказа",
